--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 project_config.json
 soulstruct_config.json
-build_exe_*.cmd
 venv*/
 
 # Byte-compiled / optimized / DLL resources
@@ -35,6 +34,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+!SoulstructProjectEditor.spec
 
 # Installer logs
 pip-log.txt
