--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 project_config.json
 soulstruct_config.json
-__ds1r_cache__
+__address_cache__
 venv*/
 
 # Byte-compiled / optimized / DLL resources
