Support DCX_ZSTD compression (SOTE reg)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "numpy",        # required for math classes/operations
     "rich>=13",     # required for nice printing/logging
     "typer",        # required for CLI
+    "zstandard",    # required for ZSTD compression (Elden Ring regulation DCX)
 ]
 
 [project.optional-dependencies]
